[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Texturas/Tayrin/light.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/saida_fase.gd" type="Script" id=2]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Dark/F-Key.png" type="Texture" id=3]
[ext_resource path="res://src/Fonts/Cinzel/cinzel.regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="Gradient" id=91]
offsets = PoolRealArray( 0, 0.796703 )
colors = PoolColorArray( 1, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=92]
gradient = SubResource( 91 )
width = 500
height = 500
fill = 1
fill_from = Vector2( 1, 1 )
fill_to = Vector2( 0.2, 0 )

[sub_resource type="RectangleShape2D" id=93]
extents = Vector2( 107.5, 160 )

[sub_resource type="DynamicFont" id=94]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Saída" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 513
texture = SubResource( 92 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 256, 160 )
texture = ExtResource( 1 )
energy = 2.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 140.5, 88 )
shape = SubResource( 93 )

[node name="TextoAjuda" type="Node2D" parent="."]
light_mask = 0
scale = Vector2( 0.12, 0.12 )
z_index = 200

[node name="TextoAjuda" type="Control" parent="TextoAjuda"]
light_mask = 0
margin_left = -158.333
margin_top = 608.333
margin_right = -158.333
margin_bottom = 608.333
rect_scale = Vector2( 1.5, 1.5 )

[node name="Texto" type="Label" parent="TextoAjuda/TextoAjuda"]
light_mask = 0
margin_right = 1064.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 94 )
text = "Pressione         para avançar"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Imagem" type="Sprite" parent="TextoAjuda/TextoAjuda"]
light_mask = 0
position = Vector2( 665, 72 )
scale = Vector2( 0.25, 0.25 )
z_index = 150
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
